--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,15 @@ android {
         exclude 'META-INF/NOTICE'
     }
 
-    compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
+
 
     defaultConfig {
-        applicationId "com.firebase.androidchat"
-        minSdkVersion 10
-        targetSdkVersion 21
+        applicationId "com.techbus.androidchat"
+        minSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -28,4 +30,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.firebase:firebase-client-android:2.0.3+'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:support-v4:24.0.0'
+    compile 'com.rockerhieu.emojicon:library:1.3.3'
+    compile 'com.google.android.gms:play-services-auth:9.2.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
