--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.firebase.androidchat">
+    package="com.techbus.androidchat">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="com.firebase.androidchat.ChatApplication"
+        android:name=".App.ChatApplication"
         android:allowBackup="true"
         android:icon="@drawable/firebase_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".Activity.MainActivity"
+            android:label="@string/app_name"
+
+            android:theme="@style/AppTheme">
+
+        </activity>
+        <activity android:name=".Activity.welcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
